✨ Add discounts everywhere on FE
